[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/gameboy style bg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameboyShell.tscn" type="PackedScene" id=2]
[ext_resource path="res://Images/enemy marker.png" type="Texture" id=3]
[ext_resource path="res://Images/enemy cleared.png" type="Texture" id=4]
[ext_resource path="res://Images/your home.png" type="Texture" id=5]
[ext_resource path="res://Images/you unhappy.png" type="Texture" id=6]
[ext_resource path="res://Images/default pet.png" type="Texture" id=7]
[ext_resource path="res://Scripts/TownMap.gd" type="Script" id=8]
[ext_resource path="res://OpenDyslexic-Regular.otf" type="DynamicFontData" id=9]
[ext_resource path="res://Sounds/blipSelect.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 122
font_data = ExtResource( 9 )

[node name="TownMap" type="Node2D"]
script = ExtResource( 8 )

[node name="GameboyStyleBg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Townies" type="Node2D" parent="."]

[node name="Enemy" type="TextureButton" parent="Townies"]
margin_left = 204.0
margin_top = 971.0
margin_right = 384.0
margin_bottom = 1152.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="EnemyPet" type="Sprite" parent="Townies/Enemy"]
visible = false
self_modulate = Color( 0.937255, 1, 0.192157, 1 )
position = Vector2( 131, 219 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="Enemy2" type="TextureButton" parent="Townies"]
margin_left = 738.0
margin_top = 1599.0
margin_right = 918.0
margin_bottom = 1780.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="EnemyPet2" type="Sprite" parent="Townies/Enemy2"]
visible = false
self_modulate = Color( 0.188235, 1, 1, 1 )
position = Vector2( 0, 181 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="Enemy3" type="TextureButton" parent="Townies"]
margin_left = 1008.0
margin_top = 680.0
margin_right = 1188.0
margin_bottom = 861.0
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="EnemyPet3" type="Sprite" parent="Townies/Enemy3"]
visible = false
self_modulate = Color( 0.968627, 0.439216, 1, 1 )
position = Vector2( 225, 181 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="TownLabel" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 71.0
margin_top = 157.0
margin_right = 1376.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 1 )
text = "PETS R BAD VILLE"
align = 1

[node name="YourHome" type="Sprite" parent="."]
position = Vector2( 730, 1103 )
texture = ExtResource( 5 )

[node name="YourPet" type="Sprite" parent="YourHome"]
position = Vector2( 115, 204 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="TextureProgress" type="TextureProgress" parent="YourHome"]
margin_left = -93.0
margin_top = -41.0
margin_right = 87.0
margin_bottom = 140.0
max_value = 99.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 4 )
fill_mode = 5

[node name="EndButton" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1440.0
margin_bottom = 2294.0
disabled = true

[node name="GameboyShell" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="button_up" from="Townies/Enemy" to="." method="_on_Enemy_button_up"]
[connection signal="button_up" from="Townies/Enemy2" to="." method="_on_Enemy2_button_up"]
[connection signal="button_up" from="Townies/Enemy3" to="." method="_on_Enemy3_button_up"]
[connection signal="button_up" from="EndButton" to="." method="_on_EndButton_button_up"]
